--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,3 +39,10 @@ a:hover {
 .home_feature p {
   margin: 0.5rem 0;
 }
+
+.card {
+  -webkit-box-shadow: -1px 5px 15px 5px #bbb;
+  box-shadow: -1px 5px 15px 5px #bbb;
+  margin-bottom: 40px;
+  padding: 35px 30px 40px 35px;
+}
